@@ -1,19 +1,12 @@
 =====НОВОСТИ ПРО ТИА====
-ТИА 50.0.0, ноябрь 2019
+ТИА 50.0.4, декабрь 2019
 ---------------------------------------
+
+   ПРИВЕТ!
   
-   ЗРИМОЕ
-
-   Появился новый, альтернативный интерфейс под названием "Стыковка". По умолчанию он выключен, переключиться можно в Наладка - Интерфейс - Режим интерфейса. Я давно собирался такое сделать, но останавливала привычка ко классическому интерфейсу. А когда я понял, что можно не отказываться от последнего, а предложить на выбор два - дело пошло. В стыковочном режиме, Логмемо и Знаменитое поле ввода можно перемещать внутри главного окна либо вообще выносить за его пределы в качестве отдельных окон, и это состояние запоминается между запусками ТИА. 
-   На той же вкладке настроек появилась опция "Язык интерфейса", заменяющая старую "Переопределить локаль".
-   И режим, и язык вступают в силу после перезапуска ТИА.
-
-   НЕЗРИМОЕ
-
-   Разные части ТИА по идее теперь быстрее работают за счет оптимизации циклов, связанных с итераторами.
-   Изменения в коде, отвечающем за одновременный запуск одной только копии ТИА - вместо отдельного модуля, написанного для работы под Windows, все системы (кроме OS/2) используют теперь универсальный модуль, который раньше использовался только под Юникс-подобными системами и задействует разделяемую память. Таким образом ТИА теперь не зависит от модуля QtNetwork, от которого нужна была реализация локального сервера.
-   После обработки исходников утилитой cppcheck я исправил некоторые неряшливости в коде.
-
+   В этой версии исправлен запуск ТИА в режиме "одной копии", который недавно сломался.
+   Также этот режим заработал по умолчанию в OS/2. Для OS/2 ТИА теперь компилируется с Qt5.
+  
 
   ЗАМЕТКИ ДЛЯ ВЕДУЩИХ ПАКЕТОВ
 
