@@ -1,9 +1,9 @@
 project('tea', ['cpp','c'],
          default_options : ['cpp_std=c++11'],
-         version : '50.0.3',
+         version : '50.0.4',
          license : 'GPLv3')
 
-add_global_arguments('-DVERSION_NUMBER="50.0.3"', language : 'cpp')
+add_global_arguments('-DVERSION_NUMBER="50.0.4"', language : 'cpp')
 #add_global_arguments('-DUSE_QML_STUFF=1', language : 'cpp')
 
 #harcoded for now
